--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Todo list</title>
   </head>
   <body>
-    <div class="container">
-      <div class="top-todo">
+    <div class="container" id="app">
+      <!-- <div class="top-todo">
         <h1 class="name-app">Todo list</h1>
         <div class="add-todo">
           <input type="text" class="todo-input" placeholder="type todo" id="newTodo" minlength = 3/>
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="todos">
-        <ul id="todos-list" class="todos-list">
+        <ul id="todos-list" class="todos-list"> -->
           <!-- <li class="todo-added">
             <input type="checkbox" />
             <span>сходить в магазин</span>
@@ -33,13 +33,13 @@
             <span>помыть машину</span>
             <img src="./images/trash-alt-solid.svg" alt="" class="delete" />
           </li> -->
-        </ul>
+        <!-- </ul>
       </div>
       <div class="show-diff-todos">
         <button class="add-button mr-5" id="active">active</button>
         <button class="add-button mr-5" id="complete" >completed</button>
         <button class="add-button mr-5" id="all">all</button>
-      </div>
+      </div> -->
     </div>
     <script src="./js/myscript.js"></script>
   </body>
