--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Todo list</title>
   </head>
   <body>
-    <div class="container" id="app">
-    </div>
+    <div class="container" id="app"></div>
     <script src="./js/myscript.js"></script>
   </body>
 </html>
